# LightCrypto

./: .gitignore  BUILD_INSTALLER.md  CHANGELOG_WSL.md  CMakeLists.txt  CODEC_HOWTO.md  FILE_TRANSFER_GUIDE.md  GUI_README.md  LightCrypto.spec  OPTIMIZATION_CHANGES.md  PERFORMANCE_ANALYSIS.md  QUICKSTART_WSL.txt  README.md  README_SETUP.md  READ_ME.txt  START_HERE_WSL.md  SUMMARY_GUI_FILE_TRANSFER.md  SUMMARY_IMPROVED_VARIANT1B.md  TERMINAL_GUI_HOWTO.md  TESTING_TWO_DEVICES.md  WSL_README.md  WSL_SETUP_GUIDE.md  add_noise.py  build_installer.bat  build_windows.bat  build_windows_mingw.bat  build_windows_vs.bat  check_status.sh  cleanup.sh  cleanup_tap.sh  decrypt_gui.py  encrypt_gui.py  encrypt_gui_pty_backup.py  network_emulation.sh  rebuild.sh  report.docx  requirements.txt  setup_namespaces.sh  setup_sudo.sh  setup_tap_A.sh  setup_tap_B.sh  (+4 more)
CipherKeys/: N_16_7.csv  Q=2_4.csv  Q=2_ax2_by_q.csv  Q=2_no_collisions_fun1.csv  Q=4 (не более 4 совпадений).csv  Q=5_optimized_fun1.csv  Q=6_optimized_fun1.csv
artifacts/LightCrypto/_internal/CipherKeys/: N_16_6_primes.csv  QDM-6, Q = 6, tol = 20.csv  unknown.csv
artifacts/LightCrypto_onedir/LightCrypto/_internal/CipherKeys/: Q=2_3.csv  Q=2_4.csv  Q=2_5.csv  Q=2_6.csv  Q=2_8.csv
artifacts/deb_pkg/DEBIAN/: control
artifacts/deb_pkg/opt/LightCrypto/_internal/CipherKeys/: Q=2.csv  Q=2_2.csv  Q=2_7.csv
gui/: .gitignore  GUI_README.md  README_GUI.md  TERMINAL_GUI_HOWTO.md  build_executable.sh  decrypt_gui.py  encrypt_gui.py  launcher.py  main.py  requirements.txt  role_selector.py  РУКОВОДСТВО_ПОЛЬЗОВАТЕЛЯ.md
gui/common/: __init__.py  config.py  constants.py  terminal.py  utils.py
gui/custom/: __init__.py  codec_panel.py  decrypt_window.py  encrypt_window.py
gui/libsodium/: __init__.py  decrypt_window.py  encrypt_window.py
gui/profiles/custom_codec/: Q=2_4.json
gui_qt/: .gitignore  BUILD_README.md  __init__.py  build_executable.sh  launcher.py  lightcrypto.spec  main.py  requirements.txt  role_selector.py  run_qt.py  ИНСТРУКЦИЯ_СБОРКИ.md  ПОРТАТИВНОСТЬ.md
gui_qt/common/: __init__.py  base_window.py  config.py  constants.py  styles.py  terminal.py  utils.py
gui_qt/custom/: __init__.py  codec_panel.py  decrypt_window.py  encrypt_window.py
gui_qt/libsodium/: __init__.py  decrypt_window.py  encrypt_window.py
installer/: LightCrypto.iss  README.md  prepare_files.bat
src/: digital_codec.cpp  digital_codec.h  file_decode.cpp  file_decode_hybrid.cpp  file_decode_plain.cpp  file_encode.cpp  file_encode_hybrid.cpp  file_encode_plain.cpp  file_transfer.cpp  file_transfer.h  tap_decrypt.cpp  tap_encrypt.cpp  test_speed.cpp
Нелинейный кодек/: AllCodeFun.m  BitChange.m  Decode11ext.m  SynthCodingResearch2_data.txt  _SynthCodingResearch2.m
